Test fixed sizing on mobile slider tnails

--- a/src/app/styles/Slider.css
+++ b/src/app/styles/Slider.css
@@ -9,8 +9,8 @@
 }
 
 .slider .thumbnail {
-  width: 100%; 
-  height: 100%; 
+  width: 92px;
+  height: 92px;
   display: block;
   cursor: pointer;
   box-sizing: border-box;
@@ -52,13 +52,11 @@
 @media(max-width: 768){
 
   .slider .thumbnail-container-outer{
-    flex: 1 1 calc(33.33% - 10px);
     box-sizing: border-box; 
     margin: -3px;
    }
    
    .slider .thumbnail-container-outer.active{
-    flex: 1 1 calc(33.33% - 10px);
     margin: -3px; 
   }
 
